# universal-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.chainlit/: config.toml
app/agents/: __init__.py  agent_factory.py  base_implementation.py  workflow.py
app/agents/advertising_strategist_agent/: __init__.py  profile.py
app/agents/cto_agent/: __init__.py  profile.py
app/agents/idea_analysis_agent/: __init__.py  agent.py  profile.py
app/agents/ideation_agent/: __init__.py  agent.py  profile.py
app/agents/landing_page_designer_agent/: __init__.py  profile.py
app/agents/manager_agent/: __init__.py  agent.py  profile.py
app/agents/product_manager_agent/: __init__.py  profile.py
app/agents/strategic_advisor_agent/: __init__.py  profile.py
app/core/: __init__.py  base.py  config.py  factory.py  types.py
app/llm/: __init__.py  llm.py
app/prompts/: __init__.py  idea_analysis_agent_prompt.py  ideation_agent_prompt.py
prisma-manager/: Dockerfile
public/: custom.css  theme.json
vhost.d/: www.chanim.online
