[project]
name = "universal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "pydantic>=2.10.4,<2.11.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.24",
    "pydantic-ai-slim[openai]>=0.2.14",
]
